correction text align and button position

--- a/web/css/master.css
+++ b/web/css/master.css
@@ -8,7 +8,7 @@
     padding: 0px;
 }
 .container_block_books{
-    margin:0px auto 20px auto;
+    margin:0px auto 50px auto;
     padding:0px;
     border-top:4px solid #5D1C43;
 }
@@ -24,8 +24,7 @@
     background:linear-gradient( 135deg, #999999 , #e9e9e9, #999999 );
     width: 300px;
     height: 300px;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    padding: 5px 0px 5px 0px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -46,6 +45,7 @@
     width:300px;
     height: 150px;
     margin-top: 20px;
+    padding-right:0px;
     padding-top: 10px;
 
 
@@ -56,7 +56,6 @@
 }
 .block_text h2, .block_text h3, .block_text p{
     margin:  0px 0px 5px 0px;
-    text-align:right;
 }
 .block_text h2{
     font-size: 17px;
@@ -79,7 +78,8 @@
     border:1px solid black;
     text-decoration: none;
     color:black;
-    right:5%;
+    right:0%;
+    bottom:0%;
     position: absolute;
     z-index:2;
 
@@ -132,11 +132,14 @@
         border: 1px;
         margin-top: 0px;
         padding-top: 20px;
-        /*width:auto;*/
+
     }
 
     .btn_more {
         bottom: 0;
+    }
+    .block_text h2, .block_text h3, .block_text p{
+        text-align:right;
     }
 }
 
